gitops-management/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
#---
#apiVersion: cert-manager.io/v1 
#kind: ClusterIssuer
#metadata:
#  name: lets-encrypt-gateway
#spec:
#  acme:
#    email: martinjcolley@gmail.com
#    server: https://acme-v02.api.letsencrypt.org/directory
#    privateKeySecretRef:
#      name: letsencrypt-key
#    solvers:
#    - http01:
#          gatewayHTTPRoute:
#            parentRefs:
#              - name: gateway
#                namespace: kube-system
#                kind: Gateway
