gitops-management/gateway/harbor-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: kube-system
spec:
  hostnames:
  - harbor.podzone.cloud
  parentRefs:
  - name: gateway
  rules:
  - backendRefs:
    - name: harbor
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
